src/main/webapp/css/style.css
#top_bar{
	width:100%;
	height:50px;
	
	display:block;
	position:fixed;
	background-image: linear-gradient(bottom, rgb(36,36,36) 22%, rgb(54,53,54) 61%);
	background-image: -o-linear-gradient(bottom, rgb(36,36,36) 22%, rgb(54,53,54) 61%);
	background-image: -moz-linear-gradient(bottom, rgb(36,36,36) 22%, rgb(54,53,54) 61%);
	background-image: -webkit-linear-gradient(bottom, rgb(36,36,36) 22%, rgb(54,53,54) 61%);
	background-image: -ms-linear-gradient(bottom, rgb(36,36,36) 22%, rgb(54,53,54) 61%);

	background-image: -webkit-gradient(
		linear,
		left bottom,
		left top,
		color-stop(0.22, rgb(36,36,36)),
		color-stop(0.61, rgb(54,53,54))
	);
	
	border-bottom:1px solid black;
}

#header{
	height:50px;
	display:block;
	position:fixed;
}

#fix_header{
	height:50px;
}

#main_content{

}

.content_box{
	margin:20px 0px;
	padding:10px 0px;
	text-align:center;
	background:#FBFBFB;
	border:2px solid #D9DADB;
	overflow:hidden;
	
	-moz-border-radius: 15px;
	border-radius: 15px;
	
	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
}
.chart{
	margin:10px auto;
}

.content_box h1,h2,h3,h4,h5,p{
		padding:0px;
		margin:0px;
}

